tests/mstr/compile-fail/undefined-global.mstr
(module 'tests 'compile-fail 'undefined-global)

(state (start)
  (transition end
    missing-value))
